<resources>
    <string name="add_new_course">Add New Course</string>
    <string name="add_new_term">Add New Term</string>
    <string name="all_terms_deleted">All terms have been deleted</string>
    <string name="app_name">WGU Term Scheduler</string>
    <string name="assessment_deleted">Assessment Deleted</string>
    <string name="assessment_editor">Assessment Editor</string>
    <string name="assessment_list">Assessment List</string>
    <string name="assessment_note_editor">Assessment Note Editor</string>
    <string name="assessment_note_list">Assessment Note List</string>
    <string name="assessment_note_detail">Assessment Note Detail</string>
    <string name="assessment_detail">Assessment Detail</string>
    <string name="classes">Classes</string>
    <string name="code">Code</string>
    <string name="confirm_delete_all_terms">Delete all terms?</string>
    <string name="confirm_delete_assessment">Delete assessment?</string>
    <string name="confirm_delete_course">Delete this course?</string>
    <string name="confirm_delete_note">Confirm Delete Note</string>
    <string name="confirm_delete_term">Delete this term?</string>
    <string name="courses">Courses</string>
    <string name="course_deleted">Deleted Course</string>
    <string name="course_editor">Course Editor</string>
    <string name="course_end">Course End:</string>
    <string name="course_icon">course icon</string>
    <string name="course_list">Course List</string>
    <string name="course_mentor">Course Mentor:</string>
    <string name="course_mentor_email">Course Mentor Email:</string>
    <string name="course_mentor_phone">Course Mentor Phone:</string>
    <string name="course_name">Course Name:</string>
    <string name="course_note_editor">Course Note Editor</string>
    <string name="course_note_icon">course note icon</string>
    <string name="course_note_list">Course Note List</string>
    <string name="course_note_detail">Course Note Detail</string>
    <string name="course_start">Course Start:</string>
    <string name="course_status">Course Status:</string>
    <string name="course_detail">Course Detail</string>
    <string name="create_sample_data">Generate Sample Data</string>
    <string name="create_test_alarm">Generate Test Alarm</string>
    <string name="current_term">Current Term</string>
    <string name="date_dash">-</string>
    <string name="date_end">End Date</string>
    <string name="date_start">Start Date</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="delete_all_terms">Delete All Terms</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="delete_course">Delete Course</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_term">Delete Term</string>
    <string name="description">Description</string>
    <string name="disable_notifications">Disable Notifications</string>
    <string name="drop_course">Drop Course</string>
    <string name="edit_assessment">Edit Assessment</string>
    <string name="edit_course">Edit Course</string>
    <string name="edit_course_title">Edit Course</string>
    <string name="edit_note">Edit Note</string>
    <string name="edit_term">Edit Term</string>
    <string name="edit_term_title">Edit Term</string>
    <string name="enable_notification">Enable Notification</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="enter_new_note">Enter New Note</string>
    <string name="mark_term_active">Mark Term Active</string>
    <string name="mark_course_completed">Mark Course Completed</string>
    <string name="name">Name</string>
    <string name="need_to_remove_courses">Unable to delete term. Please remove all courses from terms prior to deleting.</string>
    <string name="new_assessment">New Assessment</string>
    <string name="no_active_term_set">Active term not set.</string>
    <string name="notes">Notes</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="note_text_hint">Enter note text here…</string>
    <string name="placeholder_course_name">Placeholder Course Name</string>
    <string name="placeholder_course_note">Placeholder Course Note</string>
    <string name="placeholder_term_name">Placeholder Term Name</string>
    <string name="save_assessment">Save Assessment</string>
    <string name="save_course">Save Course</string>
    <string name="save_note">Save Note</string>
    <string name="save_term">Save Term</string>
    <string name="share">Share…</string>
    <string name="start_course">Start Course</string>
    <string name="term_deleted">Term Deleted</string>
    <string name="term_editor">Term Editor</string>
    <string name="term_icon">term icon</string>
    <string name="term_list">Term List</string>
    <string name="term_marked_active">This term has been marked as active</string>
    <string name="term_name">Term Name: </string>
    <string name="term_saved">Term Saved</string>
    <string name="term_updated">Term Updated</string>
    <string name="term_detail">Term Detail</string>
    <string name="test_alarm">Test Alarm Activated.</string>
    <string name="title_activity_main">WGU Term Tracker</string>
    <string name="view_all_terms">View All Terms</string>
    <string name="view_assessment_note">View Assessment Note</string>
    <string name="view_course_note">View Course Note</string>
    <string name="view_term">View Term</string>
    <string name="long_test_note">This is a test note:\n\n
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt\n\n
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco\n\n
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in\n\n
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat\n\n
        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\n</string>
    <string name="planned">Planned</string>
    <string name="dash">-</string>
    <string name="term_start">Term Start</string>
    <string name="term_end">Term End</string>
    <string name="courses_button">courses button</string>
    <string name="assessments">Assessments</string>
    <string name="assessment_icon">assessment icon</string>
    <string name="placeholder_assessment_name">Placeholder Assessment Name</string>
    <string name="placeholder_assessment_code">C000</string>
    <string name="placeholder_datetime">2020–01–01 12:00:00</string>
    <string name="image">image</string>
    <string name="camera_activity">Image Capture</string>
    <string name="image_list">Image List</string>
    <string name="assessment_note">Assessment Note</string>
    <string name="assessment_note_icon">assessment note icon</string>
    <string name="date">Date</string>
    <string name="all_terms">ALL TERMS</string>
    <string name="current_term_caps">CURRENT TERM</string>
    <string name="date_and_time"><![CDATA[Date & Time]]></string>
    <string name="placeholder_assessment_note">Placeholder Assessment Note</string>
    <string name="channel_name">notifChannel</string>
    <string name="channel_description">channel description</string>
</resources>
