<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/courseIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/course_icon"
        app:srcCompat="@drawable/twotone_course_black_48" />

    <TextView
        android:id="@+id/courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="6dp"
        android:layout_toEndOf="@+id/courseIcon"
        android:maxLines="1"
        android:text="@string/placeholder_course_name"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/courseName"
        android:layout_toEndOf="@+id/courseIcon">

        <TextView
            android:id="@+id/courseStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="4dp"
            android:text="@string/date_start" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:text="@string/date_dash" />

        <TextView
            android:id="@+id/courseEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:text="@string/date_end" />

    </LinearLayout>

    <TextView
        android:id="@+id/courseStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseIcon"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/course_status" />

</RelativeLayout>