<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/courseNameField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/course_name"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/courseStartField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/course_start"
        android:inputType="date"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseNameField"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/courseEndField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/course_end"
        android:inputType="date"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseStartField"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/courseMentorField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/course_mentor"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseEndField" />

    <EditText
        android:id="@+id/courseMentorPhoneField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/course_mentor_phone"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseMentorEmailField"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/courseMentorEmailField"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/course_mentor_email"
        android:inputType="textWebEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseMentorField"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="saveCourse"
        android:text="@string/save_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseMentorPhoneField" />
</androidx.constraintlayout.widget.ConstraintLayout>