<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    tools:context="Courses.CourseActivities.CourseDetailActivity"
    tools:showIn="@layout/activity_course_detail">

    <TextView
        android:id="@+id/courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/course_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/courseStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseName"
        android:layout_alignParentStart="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/date_start"
        app:layout_constraintStart_toStartOf="@+id/courseName"
        app:layout_constraintTop_toBottomOf="@+id/courseName" />

    <TextView
        android:id="@+id/courseEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseName"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/date_end"
        app:layout_constraintStart_toStartOf="@+id/courseStartDate"
        app:layout_constraintTop_toBottomOf="@+id/courseStartDate" />

    <TextView
        android:id="@+id/courseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courseStartDate"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/planned"
        app:layout_constraintStart_toStartOf="@+id/courseEndDate"
        app:layout_constraintTop_toBottomOf="@+id/courseEndDate" />

    <ImageButton
        android:id="@+id/courseNotesButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/course_note_icon"
        android:onClick="openCourseNotes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseStatus"
        app:srcCompat="@drawable/twotone_notes_black_48" />

    <ImageButton
        android:id="@+id/courseAssessmentsButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/assessment_icon"
        android:onClick="openCourseAssessments"
        app:layout_constraintStart_toEndOf="@+id/courseNotesButton"
        app:layout_constraintTop_toBottomOf="@+id/courseStatus"
        app:srcCompat="@drawable/twotone_assessment_black_48" />

    <TextView
        android:id="@+id/courseNotesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        app:layout_constraintEnd_toEndOf="@+id/courseNotesButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseNotesButton" />

    <TextView
        android:id="@+id/courseAssessmentsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assessments"
        app:layout_constraintEnd_toEndOf="@+id/courseAssessmentsButton"
        app:layout_constraintStart_toEndOf="@+id/courseNotesButton"
        app:layout_constraintTop_toBottomOf="@+id/courseAssessmentsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>