<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/assessmentCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/code"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/assessmentName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentCode" />

    <EditText
        android:id="@+id/assessmentDateTime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/date_and_time"
        android:importantForAutofill="no"
        android:inputType="date"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentName" />

    <EditText
        android:id="@+id/assessmentDescription"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentDateTime" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="saveAssessment"
        android:text="@string/save_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessmentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>