<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/assessmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="5dp"
        android:text="@string/placeholder_assessment_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/assessmentDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/date"
        app:layout_constraintStart_toStartOf="@+id/assessmentTitle"
        app:layout_constraintTop_toBottomOf="@+id/assessmentTitle" />

    <TextView
        android:id="@+id/assessmentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/assessmentDateTime"
        app:layout_constraintTop_toBottomOf="@+id/assessmentDateTime" />

    <TextView
        android:id="@+id/assessmentNoteLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/assessment_note"
        app:layout_constraintStart_toStartOf="@+id/assessmentNotesButton"
        app:layout_constraintTop_toBottomOf="@+id/assessmentNotesButton" />

    <ImageButton
        android:id="@+id/assessmentNotesButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/assessment_note_icon"
        android:onClick="openAssessmentNotesList"
        app:layout_constraintStart_toStartOf="@+id/assessmentDescription"
        app:layout_constraintTop_toBottomOf="@+id/assessmentDescription"
        app:srcCompat="@drawable/twotone_notes_black_48" />
</androidx.constraintlayout.widget.ConstraintLayout>