<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/termName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingBottom="5dp"
        android:text="@string/placeholder_term_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/date_start"
        app:layout_constraintStart_toStartOf="@+id/termName"
        app:layout_constraintTop_toBottomOf="@+id/termName" />

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/date_end"
        app:layout_constraintEnd_toStartOf="@+id/dateDash"
        app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="2020-01-01"
        app:layout_constraintStart_toEndOf="@+id/dateDash"
        app:layout_constraintTop_toTopOf="@+id/dateDash" />

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="2020-06-30"
        app:layout_constraintStart_toEndOf="@+id/dateDash2"
        app:layout_constraintTop_toBottomOf="@+id/dateDash" />

    <ImageButton
        android:id="@+id/termButton"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/courses_button"
        app:layout_constraintStart_toStartOf="@+id/startDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/endDateLabel"
        app:srcCompat="@drawable/twotone_course_black_48"
        android:onClick="openCourseList"
        />

    <TextView
        android:id="@+id/coursesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courses"
        app:layout_constraintStart_toStartOf="@+id/termButton"
        app:layout_constraintTop_toBottomOf="@+id/termButton" />

    <TextView
        android:id="@+id/dateDash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/dash"
        app:layout_constraintStart_toEndOf="@+id/startDateLabel"
        app:layout_constraintTop_toTopOf="@+id/startDateLabel" />

    <TextView
        android:id="@+id/dateDash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingBottom="5dp"
        android:text="@string/dash"
        app:layout_constraintStart_toEndOf="@+id/endDateLabel"
        app:layout_constraintTop_toBottomOf="@+id/dateDash" />

</androidx.constraintlayout.widget.ConstraintLayout>