<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/termName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/term_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/termStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/term_start"
        app:layout_constraintStart_toStartOf="@+id/termName"
        app:layout_constraintTop_toBottomOf="@+id/termName" />

    <TextView
        android:id="@+id/termEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        android:text="@string/term_end"
        app:layout_constraintStart_toStartOf="@+id/termStart"
        app:layout_constraintTop_toBottomOf="@+id/termStart" />

    <EditText
        android:id="@+id/termNameField"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/termName"
        app:layout_constraintTop_toTopOf="@+id/termName" />

    <EditText
        android:id="@+id/termStartField"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:inputType="date"
        android:paddingTop="15dp"
        app:layout_constraintStart_toEndOf="@+id/termName"
        app:layout_constraintTop_toBottomOf="@+id/termNameField"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/termEndField"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:inputType="date"
        android:paddingTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/termStartField"
        app:layout_constraintTop_toBottomOf="@+id/termStartField"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:onClick="saveTermChanges"
        android:text="@string/save_term"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termEndField" />

</androidx.constraintlayout.widget.ConstraintLayout>